--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,10 @@
 @import 'nav.css';
 @import 'skills.css';
 @import 'file.css';
-@import 'hbd.css';
 @import 'sk.css';
+@import 'menu.css';
 
 body{
-    background-image: linear-gradient(100deg, #8c8f8e, #8e9494, #92999c, #989da4, #a0a1aa, #a8a3ac, #b0a6ad, #b7a9ad, #bbacab, #bdb0aa, #bcb5ab, #b9baaf);
+    background-color: rgba(5,18,27,1);
     margin: 0;
 }
