--- a/css/nav.css
+++ b/css/nav.css
@@ -2,8 +2,10 @@
     bottom: 0;
     left: 0;
     position: fixed;
-    width: 100%;
+    width: 100vw;
+    height: 10%;
     z-index: 100;
+    display: block;
 }
 
 .row{
