--- a/css/skills.css
+++ b/css/skills.css
@@ -10,6 +10,7 @@
     align-items: center;
     text-align: center;
     color: white;
+    margin-top: 40px;
 }
 
 .skl-title{
@@ -41,5 +42,22 @@
     }
     100%{
         transform: translateY(0px);
+    }
+}
+
+
+#showmenu{
+    animation: fplus 0.7s infinite;
+}
+
+@keyframes fplus{
+    0%{
+        transform: scale(.90);
+    }
+    50%{
+        transform: scale(0.95);
+    }
+    100%{
+        transform: scale(1);
     }
 }
