--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 @import 'skills.css';
 @import 'sk.css';
 @import 'menu.css';
+@import 'about.css';
 
 body{
     background-color: rgba(5,18,27,1);
