--- a/css/about.css
+++ b/css/about.css
@@ -1,15 +1,19 @@
-#ab-about{
-    background-color: rgb(4, 9, 12);
+#ab-about {
+    /*background-color: rgb(20,29,38);*/
+    /*position: relative;*/
+    width: 100%;
+    height: 91.5vh;
+    z-index: 7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 102;
     display: none;
 }
 
 .col-8{
-    height: 25%;
+    height: 18%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +23,7 @@
     background-color: rgba(5,18,27,1);
     height: 80%;
     width: 80%;
-    margin: auto;
+    margin: auto auto 0px auto;
     display: flex;
     justify-content: center;
     border: 1px solid rgba(62,88,105,0.5);
@@ -29,7 +33,6 @@
 .col-9{
     background-color: rgba(5,18,27,1);
     margin-top: 25px;
-    height: 30%;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
@@ -164,9 +167,6 @@
 }
 
 @media screen and (max-width: 1000px) {
-    #ab-about{
-        height: auto;
-    }
     .col-8{
         height: 150px;
     }
