--- a/css/prt.css
+++ b/css/prt.css
@@ -1,22 +1,34 @@
 #prt {
-    position: relative;
+    /*background-color: rgb(20,29,38);*/
+    /*position: relative;*/
     width: 100%;
     height: 91.5vh;
     z-index: 2;
-}
-
-.col-1 {
-    background-color: rgba(5,18,27,1);
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.col-1 {
+    background-color: rgb(228,213,183);
+    background-image: url("../img/line.png");
+    background-size: 100px;
+    border: 1px solid rgba(62,88,105,1);
+    box-shadow: -4px 4px 0px rgba(73,94,114,0.5);
+    width: 500px;
+    height: 80%;
+    margin: auto;
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*padding: 2em;*/
+}
+
 .prt-title {
+    width: 100%;
+    height: 100%;
     display: inline;
-    margin-top: -150px;
     animation: prt 1s;
 }
 
@@ -30,19 +42,74 @@
 }
 
 .before-name {
+    height: 15%;
     font-family: monospace;
-    color: rgba(0,204,0,1);
     font-size: 30px;
     letter-spacing: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 39px 5% 0px 5%;
+    transition: 500ms ease-in-out;
+}
+
+
+.prt-menu, .prt-name, .prt-more-m{
+    height: 90%;
+    width: 100%;
+    background-color: rgba(217,185,155,1);
+    /*background-image: url("../img/line.png");
+    background-size: 100px;*/
+    border: 1px solid rgba(62,88,105,1);
+    box-shadow: -4px 4px 0px rgba(73,94,114,0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.prt-name{
+    flex-direction: column;
+}
+
+.n-1{
+    font-size: 18px;
+}
+.n-2{
+    font-size: 25px;
+}
+
+.n-3{
+    font-size: 14px;
+}
+
+.prt-m-ul{
+    width: 70%;
+    display: flex;
+}
+
+.prt-m-i{
+    width: calc(100% / 2);
+    font-size: 20px;
+    font-family: monospace;
+    font-weight: 400;
+    letter-spacing: 2px;
+}
+.m-1{
+    background-color: rgba(73,94,114,0.4);
+    border: 1px solid rgba(64,82,99,1);
+    box-shadow: -4px 4px 0px rgba(73,94,114,0.7);
 }
 
 .name {
+    height: 30%;
     font-family: monospace;
-    color: rgba(0,204,0,.75);
-    font-size: 45px;
     font-weight: 700;
     letter-spacing: 2px;
-    text-shadow: -3px 3px 0px rgba(64,82,99,1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 39px 5% 0px 5%;
+    transition: 500ms ease-in-out;
 }
 
 .pump{
@@ -60,8 +127,13 @@
 
 
 .prt-more{
+    height: 30%;
     display: flex;
-    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 39px 5% 0px 5%;
+    transition: 500ms ease-in-out;
 }
 
 .btn-prt{
@@ -103,7 +175,11 @@
     color: rgba(73,94,114,1);
 }
 
-@media screen and (max-width: 720px){
+@media screen and (max-width: 1000px){
+    .col-1{
+        height: 100%;
+        width: 95%;
+    }
     .prt-title{
         text-align: center;
         transition: 200ms;
@@ -112,6 +188,9 @@
         /*display: inline;*/
         justify-content: center;
         align-items: center;
+    }
+    .prt-more, .name, .before-name{
+        margin-top: 45px;
     }
     .btn-prt{
         margin-right: 0px;
